--- a/package.json
+++ b/package.json
@@ -17,25 +17,23 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.17.1",
     "browserify": "^14.3.0",
-    "cookie-session": "^2.0.0-beta.1",
     "cookies": "^0.7.0",
     "es6-promise": "^4.1.0",
-    "eslint-plugin-react": "^6.10.3",
     "express": "^4.15.2",
+    "get-user-media-promise": "^1.1.1",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "resolve": "^1.3.3",
-    "w3c-websocket-node-wrapper": "github:formula1/w3c-websocket-node-wrapper",
     "webrtc-adapter": "^3.3.3",
     "websocket": "^1.0.24",
-    "websocket-driver": "^0.6.5",
     "ws": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
-    "jscs": "^3.0.7"
+    "jscs": "^3.0.7",
+    "eslint-plugin-react": "^6.10.3"
   }
 }
