--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node template/server",
     "build:chat": "docker built -t chat_client $(pwd)/examples/chat/client/cli",
     "start:node-client": "docker run -it -v $(pwd):/app chat_client",
+    "start:node-client:watch:c9": "docker run -it -v $(pwd):/app chat_client watch -u https://peer-to-peer-formula1.c9users.io/chat/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,6 +16,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
+    "blessed": "^0.1.81",
     "body-parser": "^1.17.1",
     "browserify": "^14.3.0",
     "cookies": "^0.7.0",
